<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="shadeViewModel"
            type="com.example.android.shadestoreinventory.ShadeViewModel" />
        <variable
            name="shade"
            type="com.example.android.shadestoreinventory.Shade" />
    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNew">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/insert_model_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_model_name"
            android:text="@={shade.shade}"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp" />
        <EditText
            android:id="@+id/insert_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_company_name"
            android:text="@={shade.company}"
            android:layout_marginBottom="32dp"
            android:layout_below="@id/insert_model_name"
            android:layout_alignStart="@id/insert_model_name"
            android:layout_alignEnd="@id/insert_model_name"/>

        <EditText
            android:id="@+id/insert_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_description"
            android:text="@={shade.description}"
            android:layout_marginBottom="32dp"
            android:layout_below="@id/insert_company_name"
            android:layout_alignStart="@id/insert_company_name"
            android:layout_alignEnd="@id/insert_company_name"/>

        <EditText
            android:id="@+id/insert_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_color"
            android:text="@={shade.color}"
            android:layout_marginBottom="32dp"
            android:layout_below="@id/insert_description"
            android:layout_alignStart="@id/insert_description"
            android:layout_alignEnd="@id/insert_description"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/insert_color"
    android:layout_alignStart="@id/insert_color"
    android:layout_alignEnd="@id/insert_color"
    android:orientation="horizontal">

    <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_weight="1"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        />

</LinearLayout>
</RelativeLayout>


</FrameLayout>

</layout>